--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,6 +95,12 @@
 .text-right {
     text-align: right !important;
 }
+.word-wrap {
+    word-wrap: break-word;
+}
+.bold {
+    font-weight: bold;
+}
 
 body {
     display: flex;
@@ -167,7 +173,7 @@ textarea, input {
     flex: 1;
     border: .1em solid rgba(147, 128, 108, .25);
     padding: 0.5em 0.75em;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .active {
@@ -321,7 +327,6 @@ textarea, input {
 
 .input-add-on-field:not(:last-child) {
     border-right: 0;
-
 }
 
 .input-add-on-item {
@@ -403,6 +408,13 @@ textarea, input {
     text-align: left;
 }
 
+.form-input .input-add-on button {
+    margin-top: 0;
+    margin-bottom: 0;
+    height: 42px;
+    border-bottom: .1em solid rgba(147, 128, 108, .25);
+}
+
 .form-input .note {
     color: #e04032;
     font-family: TitilliumWeb-Regular;
@@ -435,6 +447,10 @@ textarea, input {
 .custom1 {
   margin-top: -19px;
   margin-left: -15px;
+}
+
+.gears {
+    background: #f0f0f7;
 }
 
 .custom1 .gears {
@@ -581,7 +597,7 @@ textarea, input {
     cursor: pointer;
     border: none;
     padding: 6px 12px;
-    font-size: 17px;
+    font-size: 15px;
 }
 
 .btn-nav span:nth-child(2) {
@@ -589,7 +605,7 @@ textarea, input {
 }
 
 .btn {
-    height: 2.3em;
+    height: 42px;
     min-width: 100px;
 }
 
@@ -598,25 +614,35 @@ textarea, input {
     background-color: rgb(59, 172, 231) !important;
     color: #fff;
     border: 1px solid rgb(69, 155, 200);
+    font-size: 15px;
 }
 
 .btn-c2 {
     background-color: #37a951 !important;
     color: #fff;
+    font-size: 15px;
 }
 
 .btn-c3 {
     background-color: rgb(255, 165, 51) !important;
     color: #fff;
+    font-size: 15px;
 }
 
 .btn-c4 {
     background-color: #e34431 !important;
     color: #fff;
+    font-size: 15px;
 }
 .btn-c5 {
     background-color: #9da3b9;
     color: #fff;
+    font-size: 15px;
+}
+.form-input .btn-sign-in {
+    margin-top: 0;
+    margin-bottom: 8px;
+    min-width: 165px;
 }
 
 /* spinners */
@@ -691,6 +717,356 @@ textarea, input {
 .show {
     display: block;
 }
+
+body {
+    background: #f0f0f7;
+}
+
+.navigation-menu {
+    padding-left: 0;
+    width: 175px;
+    position: absolute;
+    top: 8px;
+    left: 150px;
+    z-index: 1;
+}
+
+.navigation-menu li {
+    background: #5a6979;
+    margin-bottom: 1px;
+}
+
+.navigation-menu li a {
+    text-decoration: none;
+    color: white;
+    font-size: 17px;
+    padding-left: 10px;
+}
+
+.general-search {
+    margin-top: 25px;
+}
+
+.input-column {
+    text-align: right;
+}
+
+.main-nav .navigation-menu li {
+    display: block;
+    margin-right: 0;
+}
+
+.instructions, .instructions-git-repo {
+    min-height: 70px;
+    background: #9ca2b7;
+    color: white;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
+.instructions p {
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.section-content {
+    min-height: 500px;
+    padding: 32px;
+}
+
+.circle {
+    width: 150px;
+    height: 150px;
+}
+
+/* entire container, keeps perspective */
+.circle-container, .circle-container-no-flip {
+    perspective: 1000;
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+/* flip the pane when hovered */
+.circle-container:hover .circle, .circle-container.hover .circle {
+    transform: rotateY(180deg);
+}
+.circle-front, .circle-back {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.circle-front p, .circle-back p {
+    font-size: 23px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.circle-front .type {
+    flex: 0;
+}
+
+.circle-readme {
+    position: absolute;
+    font-size: 14px;
+    color: white;
+    top: 110px;
+    left: 40px;
+    text-decoration: underline;
+}
+
+.circle-builder, .circle-deployment, .circle-settings {
+    color: white;
+    font-size: 15px;
+    margin: 8px;
+}
+.circle-builder:hover, .circle-deployment:hover, .circle-settings:hover {
+    text-decoration: underline;
+}
+
+/* flip speed goes here */
+.circle {
+    transition: 0.4s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+/* hide back of pane during swap */
+.circle-front, .circle-back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 2px solid #5a6979;
+    -webkit-box-shadow: 2px 3px 3px 0px rgba(0, 0, 0, 0.16);
+    -moz-box-shadow: 2px 3px 3px 0px rgba(0, 0, 0, 0.16);
+    box-shadow: 2px 3px 3px 0px rgba(0, 0, 0, 0.16);
+    text-align: center;
+    color: #5a6979;
+}
+
+/* front pane, placed above back */
+.circle-front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.circle-back {
+    transform: rotateY(180deg);
+}
+
+.blue-carbon {
+    background:
+    radial-gradient(#4f5d6b 9%, transparent 10%) 0 0,
+    radial-gradient(#4f5d6b 9%, transparent 10%) 8px 8px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+    background-color: #6b7887;
+    background-size: 14px 14px;
+}
+
+.blue-plus {
+    background-color: #3f85ca;
+}
+
+.blue-plus .octicon-plus {
+    font-size: 50px;
+    cursor: pointer;
+}
+
+.gray-plus {
+   background: #5a6979;
+}
+
+.gray-plus .octicon-plus {
+    font-size: 50px;
+    cursor: pointer;
+    color: white;
+}
+
+.light {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    position: absolute;
+    top: 18px;
+    left: 66px;
+}
+
+.green-light {
+    background: #3cad29;
+}
+
+.green-light-color, .form-input .input-add-on .green-light-color {
+    color: #3cad29;
+}
+
+.orange-light {
+    background: #ff8a00;
+}
+
+.orange-light-color {
+    color: #ff8a00;
+}
+
+.blue-light {
+    background: #3f85ca;
+}
+
+.blue-light-color {
+    color: #3f85ca;
+}
+
+.red-light {
+    background: #e82121;
+}
+
+.red-light-color, .form-input .input-add-on .red-light-color {
+    color: #e82121;
+}
+
+.neutral-light {
+    background: #877973;
+}
+
+.plus-circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 3px solid #3f85ca;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.plus-circle span {
+    color: #3f85ca;
+}
+
+.legend {
+    width: 200px;
+    height: 200px;
+    margin-top: 20px;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+}
+
+.light-description {
+    padding-left: 10px;
+    font-size: 15px;
+}
+
+.legend-light {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+}
+
+.legend-details {
+    margin-top: 25px;
+}
+
+.flat-surface {
+    border: 0;
+}
+
+.status {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background: #5a6979;
+    cursor: pointer;
+}
+
+.main-nav .dropped {
+    display: none;
+}
+
+.navigation-menu li {
+    cursor: pointer;
+}
+
+.no-title input {
+    margin-bottom: 8px;
+}
+
+.payment-cards {
+    padding-left: 0;
+}
+
+.payment-cards li {
+    font-size: 10px // <=== Edit this to change the size of cards
+    display: inline-block;
+    margin-right: .25em;
+    background-image: url(http://imgh.us/payment-cards2.svg);
+    background-size: 23.077em;
+    background-repeat: no-repeat;
+    height: 2.8em;
+    width: 4.3em;
+    display: inline-block;
+}
+
+.visa {
+    background-position: -.07em -.142em;
+}
+
+.mastercard {
+    background-position: -4.756em -.142em;
+}
+
+.amex {
+    background-position: -9.44em -.142em;
+}
+
+.discover {
+    background-position: -14.13em -.142em;
+}
+
+.paypal {
+    background-position: -18.79em -.142em;
+}
+
+#slider, .bar {
+    width: 100%;
+}
+
+#slider input {
+    padding: 0;
+}
+
+.email-confirmation {
+    background: white;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.email-confirmation p {
+    padding-left: 3px;
+    font-size: 17px;
+}
+
+.create-account-phase h3, .choose-plan-phase h3, .account-confirmation-phase h3 {
+    padding-left: 8px;
+}
+
+.account-confirmation-phase p, .account-confirmation-phase a {
+    font-size: 16px;
+}
+
 /* media querys */
 @media (min-width: 768px) {
     .main-nav {
@@ -758,6 +1134,9 @@ textarea, input {
     }
     .footer-companies img {
         padding-bottom: 20px;
+    }
+    .navigation-menu {
+        left: 32px;
     }
 }
 
