Big commit money options

--- a/public/css/private.css
+++ b/public/css/private.css
@@ -773,7 +773,7 @@ span.tt-suggestions {
     display: block;
 }
 
-.app-nav ul, #settings-nav ul {
+.money-nav ul, #settings-nav ul {
     display: flex;
     font-size: 1.4em;
     color: white;
@@ -791,19 +791,19 @@ span.tt-suggestions {
     margin-right: 0;
 }
 
-.app-nav ul li, #settings-nav ul li {
+.money-nav ul li, #settings-nav ul li {
     margin-top: 5px;
     margin-right: 4px;
     background: #9da3b9;
 }
 
-.app-nav a, #settings-nav a {
+.money-nav a, #settings-nav a {
     color: white;
     padding: 3px 15px;
     display: block;
 }
 
-.app-nav ul .active, #settings-nav ul .active {
+.money-nav ul .active, #settings-nav ul .active {
     background: #4f5660;
 }
 
@@ -816,7 +816,6 @@ span.tt-suggestions {
 }
 
 .svg-apps, .svg-database, .svg-earth, .svg-account, .svg-directions, .svg-settings, .svg-signout {
-    background: url("/!/images/sprites/sprite-navigation.svg") 0 0 no-repeat;
     display: inline-block;
     vertical-align: top;
 }
